Make .entry-content have overflow: hidden; to ensure that an element doesn’t unexpectedly break out of the container in _primary.scss.

--- a/assets/scss/layout/_primary.scss
+++ b/assets/scss/layout/_primary.scss
@@ -66,6 +66,7 @@
 }
 
 .entry-content {
+  overflow: hidden;
   @include rem(margin-bottom, 3);
   >p {
     &:first-child {
